# chip8-rs

./: .envrc  .gitignore  Cargo.toml  README.md  biome.json  flake.nix
chip8_backend/: Cargo.toml
chip8_backend/src/: lib.rs
chip8_sdl/: .gitignore  Cargo.toml
chip8_sdl/src/: main.rs
chip8_wasm/: Cargo.toml
chip8_wasm/src/: lib.rs
chip8_wasm/web/: index.html  index.ts
src/: chip8.rs  cpu.rs  display.rs  input.rs  main.rs  mem.rs
